Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112315

wasm: multimedia examples do not build with qmake

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.1, 6.6.0
    • 6.5.0 RC
    • Multimedia
    • None
    • WebAssembly
    • 8ffad74e1 (dev), 27b6b5feb (6.5)

    Description

      Using qmake: (qt-cmake works on the first two)

      audiodecoder:  wasm-ld: error: duplicate symbol: AudioDecoder::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)

       

      audiorecorder: wasm-ld: error: duplicate symbol: AudioRecorder::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)

       

      both qmake and qt-cmake fail:

      spacialaudio: audiopanning.: error: undefined symbol: _ZN7QThread11setPriorityENS_8PriorityE (referenced by top-level compiled C/C++ code)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes