wasm: fix build of examples with qmake

Modern qmake does not need to include moc files.
These were creating moc_ files in the source directory causing
duplicate symbols in static build such as wasm.

Fixes: QTBUG-112315
Change-Id: I9881c1b0d79cf453c742fc68ec56ff1843a3adab
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 8ffad74e143afbdead0ad1f6da60ccd69315fea2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>